[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/crypto",
    "crates/config",
    "crates/dht",
    "crates/cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.93.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seednet/seednet"
version = "0.1.0"
authors = ["SeedNet Contributors"]

[workspace.dependencies]
# Internal crates
seednet-common = { path = "crates/common" }
seednet-crypto = { path = "crates/crypto" }
seednet-config = { path = "crates/config" }
seednet-dht = { path = "crates/dht" }

# Core async runtime
tokio = { version = "1.52", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }

# Cryptography
snow = { version = "0.10", features = [
    "default-resolver",
] }
x25519-dalek = { version = "3.0", features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "3.0", features = ["rand_core", "serde"] }
blake3 = "1.8"
sha1 = "0.11"
hkdf = "0.13"
rand = "0.8"

# Networking
socket2 = "0.6"
dashmap = "6.1"
mainline = { version = "7.0", default-features = false, features = ["async"] }
futures-lite = "2"
futures = "0.3"

# CLI / diagnostics
clap = { version = "4.6", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
