[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/crypto",
    "crates/config",
    "crates/dht",
    "crates/peer",
    "crates/tun",
    "crates/overlay",
    "crates/routing",
    "crates/transport",
    "crates/core",
    "crates/nat",
    "crates/integration-tests",
    "crates/cli",
    "crates/tracker",
]

[workspace.package]
edition = "2024"
rust-version = "1.93.1"
license = "GPL-3.0"
repository = "https://github.com/seednet/seednet"
version = "0.1.0"
authors = ["SeedNet Contributors"]

[workspace.dependencies]
# Internal crates
seednet-common = { path = "crates/common" }
seednet-crypto = { path = "crates/crypto" }
seednet-config = { path = "crates/config" }
seednet-dht = { path = "crates/dht" }
seednet-peer = { path = "crates/peer" }
seednet-tun = { path = "crates/tun" }
seednet-overlay = { path = "crates/overlay" }
seednet-routing = { path = "crates/routing" }
seednet-transport = { path = "crates/transport" }
seednet-core = { path = "crates/core" }
seednet-tracker = { path = "crates/tracker" }

# Core async runtime
tokio = { version = "1.52", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_bytes = "0.11"
postcard = { version = "1.1", features = ["alloc", "use-std"] }

# Cryptography
snow = { version = "0.10", features = [
    "ring-accelerated",
] }
x25519-dalek = { version = "3.0", features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "3.0", features = ["rand_core", "serde"] }
blake3 = "1.8"
sha1 = "0.11"
hkdf = "0.13"
rand = "0.10"

# Networking
socket2 = "0.6"
dashmap = "6.1"
mainline = { version = "7.0", default-features = false, features = ["async"] }
tun = { version = "0.8", features = ["async", "tokio"] }
futures-lite = "2"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
tokio-tungstenite = { version = "0.30" }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking"] }
serde_bencode = "0.2"

# CLI / diagnostics
clap = { version = "4.6", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2"
seednet-nat = { path = "crates/nat" }
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
