[package]
name = "seednet-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types, constants, and errors for SeedNet"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
postcard = { workspace = true }
