[package]
name = "seednet-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Orchestration engine for SeedNet overlay"

[dependencies]
seednet-common = { workspace = true }
seednet-crypto = { workspace = true }
seednet-config = { workspace = true }
seednet-dht = { workspace = true }
seednet-peer = { workspace = true }
seednet-tun = { workspace = true }
seednet-overlay = { workspace = true }
seednet-routing = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
