[package]
name = "seednet-dht"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "BitTorrent Mainline DHT peer discovery for SeedNet"

[dependencies]
seednet-common = { workspace = true }

mainline = { workspace = true }
futures-lite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
seednet-crypto = { workspace = true }
