[package]
name = "seednet-nat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "NAT traversal: STUN, hole punching, and relay for SeedNet"

[dependencies]
seednet-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
