[package]
name = "seednet-overlay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Overlay IP allocation and collision detection for SeedNet"

[dependencies]
seednet-common = { workspace = true }
seednet-crypto = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
