[package]
name = "seednet-peer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Peer abstraction, state machine, and manager for SeedNet"

[dependencies]
seednet-common = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
