[package]
name = "seednet-peer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Peer abstraction, state machine, message layer for SeedNet"

[dependencies]
seednet-common = { workspace = true }
seednet-crypto = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "net", "io-util", "macros", "rt"] }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
postcard = { workspace = true }
