[package]
name = "seednet-routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "TUN packet routing for SeedNet overlay"

[dependencies]
seednet-common = { workspace = true }
seednet-crypto = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
