[package]
name = "seednet-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pluggable transport layer for SeedNet (UDP, TCP, WS, WSS)"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
