[package]
name = "seednet-tun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-platform TUN interface for SeedNet overlay"

[features]
default = []
real-tun = ["dep:tun"]

[dependencies]
seednet-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tun = { workspace = true, optional = true }
