[package]
name = "seednet-tun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-platform TUN interface for SeedNet overlay"

[dependencies]
seednet-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
tun = { workspace = true }
